--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,31 +1,32 @@
-.title {
-    color: blue;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #fff; /* 白をベースの背景色に設定 */
 }
 
-.header {
-    font-weight: 200;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    padding: 50px 6.94444vw;
+header {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
 }
 
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    padding: 40px 8vw;
-    z-index: 3;
-    font-family: NotoSansJP-Medium;
-    font-weight: 300;
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.content {
+  padding: 20px;
+}
+
+footer {
+  text-align: center;
+  padding: 10px;
+  background-color: #333;
+  color: white;
 }
