--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,3 +30,13 @@ footer {
   background-color: #333;
   color: white;
 }
+
+/* オレンジの差し色 */
+.container h2, .footer p {
+  color: #FFA500; /* オレンジ色に設定 */
+}
+
+/* 水色の差し色 */
+.container p {
+  color: #00BFFF; /* 水色に設定 */
+}
