--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,19 @@ a img:hover {
     z-index: 100;
 }
 
+.header__main .inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.inner {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 960px;
+    padding: 0 20px;
+}
+
 .head {
 	display: flex;
     flex-direction: row;
@@ -57,19 +70,22 @@ a img:hover {
 }
 
 nav ul {
-	display: flex;
-    flex-direction: row;
-    justify-content: center;
-    list-style: none;
-	margin-bottom: 0.5rem;
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
 }
 nav li {
-    display: block;
-    flex: 0 0 15%;
+    display: list-item;
+    text-align: -webkit-match-parent;
 }
 nav li a {
     text-decoration: none;
     text-align: center;
+    color: #2C363A;
 }
 nav a:hover {
     text-decoration: underline;
@@ -204,7 +220,7 @@ footer h5 {
     text-align: center;
 }
 #pagetop a:hover {
-    background: var(--linkhover-color:);
+    background: var(--linkhover-color);
 }
 /*パンくずリスト
 -----------------------------------*/
