--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ ul, ol {
     background: #fff;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.07);
     z-index: 100;
+	height: 70px;
 }
 
 .header__main .inner {
